WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112960
[BlackBerry] addSearchProvider shouldn't match the full host, only the server
https://bugs.webkit.org/show_bug.cgi?id=112960
Summary
[BlackBerry] addSearchProvider shouldn't match the full host, only the server
otcheung
Reported
2013-03-21 13:46:29 PDT
Use the getRegisteredDomain ftn to compare the target url and the security origin url. Also, only dispatch the addsearchprovider event after we check user-gesture.
Attachments
Patch
(5.37 KB, patch)
2013-03-21 13:48 PDT
,
otcheung
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
otcheung
Comment 1
2013-03-21 13:48:48 PDT
Created
attachment 194326
[details]
Patch
Rob Buis
Comment 2
2013-03-21 14:46:00 PDT
Comment on
attachment 194326
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2013-03-21 14:54:40 PDT
Comment on
attachment 194326
[details]
Patch Clearing flags on attachment: 194326 Committed
r146526
: <
http://trac.webkit.org/changeset/146526
>
WebKit Review Bot
Comment 4
2013-03-21 14:54:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug