[BlackBerry] addSearchProvider shouldn't match the full host, only the server https://bugs.webkit.org/show_bug.cgi?id=112960

Patch by Otto Derek Cheung <otcheung@rim.com> on 2013-03-21
Reviewed by Rob Buis.
Internally Reviewed by Jeff Rogers.

Remove full host matching. only check if domains are from the same server.

Also, check user gesture before dispatching the addSearchProvider event to the browser.

* WebCoreSupport/ChromeClientBlackBerry.cpp:
(WebCore::ChromeClientBlackBerry::addSearchProvider):
(WebCore::ChromeClientBlackBerry::isSearchProviderInstalled):
* WebCoreSupport/ChromeClientBlackBerry.h:
(ChromeClientBlackBerry):
* WebCoreSupport/ExternalExtension.cpp:
(IsSearchProviderInstalledMethod):

Canonical link: https://commits.webkit.org/131307@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146526 268f45cc-cd09-0410-ab3c-d52691b4dbfc