Source/WebKit/blackberry/WebCoreSupport/ChromeClientBlackBerry.h
@@ -152,7 +152,7 @@ public:
 #endif
 
     virtual void addSearchProvider(const BlackBerry::Platform::String&, const BlackBerry::Platform::String&);
-    virtual int isSearchProviderInstalled(const BlackBerry::Platform::String&, const BlackBerry::Platform::String&);
+    virtual int isSearchProviderInstalled(const BlackBerry::Platform::String&);
 
     BlackBerry::WebKit::WebPagePrivate* webPagePrivate() const { return m_webPagePrivate; }
 
